# Messanger_project

./: README.md
Client_backend/: CMakeLists.txt  OnlyClientSide.cpp
Client_backend/OnlyClientSide/: OnlyClientSide.sln  OnlyClientSide.vcxproj  OnlyClientSide.vcxproj.filters
Client_frontend/: AuthoWindow.xaml  AuthoWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NetworkModule.cs  RegisterWindows.xaml  RegisterWindows.xaml.cs  WpfApp1.csproj  WpfApp1.sln
Server_backend/: CMakeLists.txt  ClientServerApp.cpp
Server_backend/ClientServerApp/: ClientServerApp.cpp  ClientServerApp.sln  ClientServerApp.vcxproj  ClientServerApp.vcxproj.filters  OnlyClientSide.cpp  Tcp_listener.cpp  Tcp_listener.h  db_handler.cpp  db_handler.h  messanger_db.dblite  p_controller.cpp  p_controller.h
